--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
     "multer": "^2.0.2",
+    "react-webcam": "^7.2.0",
     "streamifier": "^0.1.1"
   }
 }
