--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "swagger": "node swagger.js"
+    "swagger": "node swagger.js",
+    "seeder": "node seeder.js"
   },
   "keywords": [],
   "author": "",
